--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
+a {
+  color:inherit;
+  text-decoration: none;
+}
+
 .App {
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
+		color: white;
 }
 
 .App-content {
+		font-size: large;
     height: 100%;
     display: flex; 
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     aligh-items: center;
-    padding: 40px;
  }
 
 
@@ -21,7 +27,7 @@
   }
 
   .App-content {
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
   }
 }
